# umzi_manga_sharp_rs

./: .gitignore  Cargo.toml  config.json
src/: main.rs
