[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
rayon = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
indicatif = "0.17.0"
num_cpus = "1.14.0"
structopt = "0.3.26"
ndarray="0.15.6"
imageproc="0.23.0"
