[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
rayon = "1.8.0"
ndarray="0.15.6"
indicatif = "0.17.7"
#imageproc = "0.23.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
once_cell = "1.19.0"


